feat: TASK-5 demo

--- a/demo/static/results.css
+++ b/demo/static/results.css
@@ -40,7 +40,7 @@ body {
     text-decoration: underline;
 }
 
-.cos_similarity {
+.cos-similarity {
     font-size: 14px;
     color: #5f6368;
     margin-top: 6px;
